# graphics-playground

./: .gitignore  README.md  main.py  pyproject.toml
graphics_playground/: game.py
graphics_playground/demo/: attractor.py  mandelbrot.py  maze.py  utils.py
graphics_playground/menu/: main_menu.py  menu.py
graphics_playground/menu_system/: main_menu.py  menu.py  menu_types.py
